# slz-readiness

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  apm.yml  llms.txt  pyproject.toml
.github/agents/: slz-readiness.agent.md
.github/instructions/: slz-readiness.instructions.md
.github/plugin/: marketplace.json  plugin.json
.github/prompts/: slz-discover.prompt.md  slz-evaluate.prompt.md  slz-plan.prompt.md  slz-reconcile.prompt.md  slz-run.prompt.md  slz-scaffold.prompt.md
.github/skills/azure-avm-bicep-mode/: SKILL.md
.github/skills/discover/: SKILL.md
.github/skills/evaluate/: SKILL.md
.github/skills/plan/: SKILL.md
.github/skills/reconcile/: SKILL.md
.github/skills/scaffold/: SKILL.md
.github/workflows/: ci.yml  pack.yml  release.yml
data/baseline/: VERSIONS.json
data/baseline/alz-library/: _manifest.json
docs/: README.md  anti-hallucination.md  architecture.md  brownfield.md
hooks/: post-tool-use.sh  post_tool_use.py  pre-tool-use.sh  pre_tool_use.py
scripts/: AGENTS.md  release.py
scripts/scaffold/avm_templates/: alz-policy-definitions.bicep  archetype-policies.bicep  log-analytics.bicep  management-groups.bicep  policy-assignment.bicep  role-assignment.bicep  sovereignty-confidential-policies.bicep  sovereignty-global-policies.bicep  sovereignty-policies.bicep
scripts/scaffold/param_schemas/: alz-policy-definitions.schema.json  archetype-policies.schema.json  log-analytics.schema.json  management-groups.schema.json  policy-assignment.schema.json  role-assignment.schema.json  sovereignty-confidential-policies.schema.json  (+2 more)
scripts/slz_readiness/: __init__.py  _alias_io.py  _summary.py  _trace.py
tests/: AGENTS.md  __init__.py  test_az_path.py  test_hooks.py  test_posthook_alias.py
tests/fixtures/: minimal_non_compliant.findings.json  mostly_compliant.findings.json
tests/reconcile/: test_cli.py  test_evaluate_alias.py  test_schema.py
tests/unit/: conftest.py  test_alias_io.py  test_brownfield_move_guidance.py  test_demo_replay_integration.py  test_discover_brownfield.py  test_discover_perf.py  test_discover_preflight.py  test_discover_progress.py  test_discover_reconcile_golden.py  test_discover_scope.py  test_evaluate_dedupe.py  test_evaluate_defid_match.py  test_evaluate_drift_statuses.py  test_evaluate_golden.py  test_evaluate_vacuous_and_dedupe.py  test_greenfield_parity.py  test_hook_deploy_script_parity.py  test_matchers_v0_8_0.py  test_phase_summaries.py  test_reconcile_proposer.py  test_registry_matches_yaml.py  test_scaffold.py  test_scaffold_brownfield.py  test_scaffold_deploy_script.py  test_scaffold_prefill.py  test_scaffold_tenant_root.py  test_smoke.py  test_summary_helpers.py  test_tenant_labels_contract.py  test_trace_jsonl_emitted.py
tests/whatif/: test_bicep_build.py
wiki/: AGENTS.md  catalogue.json  llms-full.txt  llms.txt  package-lock.json  package.json
wiki/docs/: index.md
(+92 files in other folders)
